crates/reinhardt-pages/tests/ui/page/fail/controlled_bind_unsupported_element.rs
use reinhardt_pages::page;

fn main() {
	let _ = page!({
		div {
			a11y: off,
			bind: (),
		}
	});
}
